# AI-OS

./: .gitignore  README.md  WORKFLOWS.md
container/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  litellm_config.yaml  opencode.jsonc
container/blender/: AGENTS.md  pyproject.toml  run.py  state.py
container/blender/tests/: conftest.py  test_state.py
container/carousel/: brand_merge.py  brief.py  canva_ops.py  deck_carousel.py  export_util.py  mcp_client.py  posts_carousel.py  run.py  state.py  template.py
container/fixtures/: README.md  brief.sample.json  brief.schema.jsonc  layouts.registry.jsonc  sample-bulk-create.csv  sample-dataset.json  template.schema.jsonc  templates.registry.jsonc
container/gpu/: Dockerfile.gpu  README.md  addon.py  onstart-baked.sh  onstart.sh  start_blender_mcp.py  test_diff.py
container/mcps/grok-mcp/: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
container/mcps/grok-mcp/src/: __init__.py  server.py  utils.py
container/mcps/layerre-mcp/: README.md  example_env  main.py  pyproject.toml
container/mcps/layerre-mcp/src/: __init__.py  server.py  utils.py
container/mcps/vision-mcp/: main.py  pyproject.toml
container/mcps/vision-mcp/src/: __init__.py  server.py
container/video/: ffmpeg_ops.py  grok_client.py  models.py  pyproject.toml  run.py  state.py
docs/: poc-oauth-relay.md
scripts/: canva-oauth-relay.py  test-gpu-provision.sh
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
web/compose/: user.compose.yml
web/e2e/: _auth.ts  gpu-ui.spec.ts
(+136 files in other folders)
