[project]
name = "blender-pipeline"
version = "0.1.0"
description = "Deterministic helper script for the Blender workflow (lease bootstrap, artifact sync, headless batch render)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
