[project]
name = "mcp-vision"
version = "1.0.0"
description = "Free-tier vision MCP server (OpenRouter Qwen2.5-VL) for verifying Blender renders/images."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
